opam-version: "2.0"
version: "dev"

homepage: "https://github.com/libtx/Storage"
dev-repo: "git+https://github.com/libtx/Storage.git"
license: "GPL3"
maintainer: "noreply@example.com"
synopsis: "Axiomatic abstraction of storage container"
description: """
"""

build: [
  [make "-j%{jobs}%"]
]
install: [make "install"]
depends: [
  "coq" {(>= "8.19")}
  "coq-hammer"
]

tags: [
  "keyword:containers"
]
authors: [
  "k32"
]
